bug fix with spacing in mobile view for portfolio page

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -255,6 +255,7 @@ nav img {
 
   .text_column.left {
     padding-right: 0;
+    padding-bottom: 2rem;
   }
 
   .text_column.right {
